# SmartGridDetectionSimulation_LUT

./: README.md  githubKey  githubKey.pub
src/24hour/: CMakeLists.txt  checkRes.cpp  keyGen.cpp  makeEnctab_1.cpp  makeEnctab_2.cpp  makeEnctab_3.cpp  script.py  step1_CS1.cpp  step2_TA1.cpp  step3_CS2.cpp  step5_CS3.cpp  step6_TA3.cpp
src/24hour/DateWiseData/NormalWinso/2014/: 2014-01-01.txt  2014-01-02.txt  2014-01-03.txt  2014-01-04.txt  2014-01-05.txt  2014-01-06.txt  2014-01-07.txt  2014-01-08.txt  2014-01-09.txt  2014-01-10.txt  2014-01-11.txt  2014-01-12.txt  2014-01-13.txt  2014-01-14.txt  2014-01-15.txt  2014-01-16.txt  2014-01-17.txt  2014-01-18.txt  2014-01-19.txt  2014-01-20.txt  2014-01-21.txt  2014-01-22.txt  2014-01-23.txt  2014-01-24.txt  2014-01-25.txt  2014-01-26.txt  2014-01-27.txt  2014-01-28.txt  2014-01-29.txt  2014-01-30.txt  2014-01-31.txt  2014-02-01.txt  2014-02-02.txt  2014-02-03.txt  2014-02-04.txt  2014-02-05.txt  2014-02-06.txt  2014-02-07.txt  2014-02-08.txt  2014-02-09.txt  (+325 more)
src/24hour/ctxt_res/test#1/: 1_2014.txt  1_2015.txt  1_2016_200_add.txt  1_2016_200_cam.txt  1_2016_200_ded.txt  1_2016_800_add.txt  1_2016_800_cam.txt  1_2016_800_ded.txt  new2016.txt
src/24hour/ctxt_res/test#2/: 2_2014.txt  2_2015.txt  2_2016.txt  2_2016_200_add.txt  2_2016_200_cam.txt  2_2016_200_ded.txt  2_2016_800_add.txt  2_2016_800_cam.txt  2_2016_800_ded.txt
src/24hour/ctxt_res/test#3/: 3_2014.txt  3_2015.txt  3_2016.txt  3_2016_200_add.txt  3_2016_200_cam.txt  3_2016_200_ded.txt  3_2016_800_add.txt  3_2016_800_cam.txt  3_2016_800_ded.txt
src/24hour/ptxt_res/: 2014.txt  2015.txt  2016.txt  2016_add_200_5.txt  2016_add_800_5.txt  2016_cam_200_5.txt  2016_cam_800_5.txt  2016_ded_200_5.txt  2016_ded_800_5.txt
(+16029 files in other folders)
